--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>CardControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Cards\CardType.cs" />
+    <Compile Include="Cards\Debuff.cs" />
     <Compile Include="Cards\Debuffs\FrozenDebuff.cs" />
     <Compile Include="Cards\Monsters\FireAntCard.cs" />
     <Compile Include="Cards\Monsters\BarbarianPriestCard.cs" />
