--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Cards\CardType.cs" />
     <Compile Include="Cards\Debuff.cs" />
     <Compile Include="Cards\Debuffs\FrozenDebuff.cs" />
+    <Compile Include="Cards\Debuffs\PoisonDebuff.cs" />
     <Compile Include="Cards\Monsters\FireAntCard.cs" />
     <Compile Include="Cards\Monsters\BarbarianPriestCard.cs" />
     <Compile Include="Cards\Monsters\BarbarianWarlordCard.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Cards\Spells\HealCard.cs" />
     <Compile Include="Cards\Spells\LesserHealCard.cs" />
     <Compile Include="Cards\Trait.cs" />
+    <Compile Include="Cards\Traits\PoisonWeaponTrait.cs" />
     <Compile Include="CardWarsGame.cs" />
     <Compile Include="CardWarsGameLogic.cs" />
     <Compile Include="CardWarsGameView.xaml.cs">
@@ -260,6 +262,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Cards\Debuffs\fog-blue-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Cards\Spells\enchant-acid-3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Cards\Debuffs\fog-acid-3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
