added card: EnchantWeaponPoison
fixed bug that cards could be attacked even if defender was present
fixed bug that pressing escape while card is selected and mouse over an empty tile, the tile is not cleared

--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Cards\Monsters\BarbarianWarlordCard.cs" />
     <Compile Include="Cards\Monsters\BasiliskCard.cs" />
     <Compile Include="Cards\Monsters\BatCard.cs" />
+    <Compile Include="Cards\Spells\EnchantWeaponPoisonCard.cs" />
     <Compile Include="Cards\Spells\EndOfDaysCard.cs" />
     <Compile Include="Cards\Traits\HasteTrait.cs" />
     <Compile Include="Cards\Traits\HealRandomFriendlyMonsterTrait.cs" />
