added style to gray out enemies that are not valid targets

--- a/Hextasy.Framework/Hextasy.Framework.csproj
+++ b/Hextasy.Framework/Hextasy.Framework.csproj
@@ -73,6 +73,7 @@
     <Compile Include="HexGrid.cs" />
     <Compile Include="HexMap.cs" />
     <Compile Include="IGame.cs" />
+    <Compile Include="IsNullConverter.cs" />
     <Compile Include="ListExtensions.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Owner.cs" />
