--- a/Hextasy.CardWarsViewer/Hextasy.CardWarsViewer.csproj
+++ b/Hextasy.CardWarsViewer/Hextasy.CardWarsViewer.csproj
@@ -4,19 +4,19 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F1A2186A-9020-4289-881B-2139A022ECC9}</ProjectGuid>
+    <ProjectGuid>{7C443FFE-19E1-426A-B591-129D065EF44A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hextasy</RootNamespace>
-    <AssemblyName>Hextasy</AssemblyName>
+    <RootNamespace>Hextasy.CardWarsViewer</RootNamespace>
+    <AssemblyName>Hextasy.CardWarsViewer</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <FodyPath>..\packages\Fody.1.20.0.0</FodyPath>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <FodyPath>..\packages\Fody.1.20.0.0</FodyPath>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -41,8 +41,10 @@
     <Reference Include="Caliburn.Micro">
       <HintPath>..\packages\Caliburn.Micro.1.5.2\lib\net45\Caliburn.Micro.dll</HintPath>
     </Reference>
-    <Reference Include="PropertyChanged, Version=1.46.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ExtendedGrid">
+      <HintPath>Libraries\ExtendedGrid.dll</HintPath>
+    </Reference>
+    <Reference Include="PropertyChanged">
       <HintPath>..\packages\PropertyChanged.Fody.1.46.0.0\Lib\NET35\PropertyChanged.dll</HintPath>
       <Private>False</Private>
     </Reference>
@@ -69,36 +71,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="GameSelectionView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SettingsShellView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="MainWindowView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>CommonAssemblyInfo.cs</Link>
-    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GameSelected.cs" />
-    <Compile Include="GameSelectionView.xaml.cs">
-      <DependentUpon>GameSelectionView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GameSelectionViewModel.cs" />
-    <Compile Include="SettingsConfirmed.cs" />
-    <Compile Include="SettingsShellView.xaml.cs">
-      <DependentUpon>SettingsShellView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SettingsShellViewModel.cs" />
-    <Compile Include="MefBootstrapper.cs" />
     <Compile Include="MainWindowView.xaml.cs">
       <DependentUpon>MainWindowView.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -106,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="MefBootstrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -139,35 +120,10 @@
       <Project>{ad3b527c-225a-4a10-a5f2-f86235ca1754}</Project>
       <Name>Hextasy.CardWars</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Hextasy.Halma\Hextasy.Halma.csproj">
-      <Project>{b6fcd5dc-e9f4-466e-9a32-b2fb69f15f4c}</Project>
-      <Name>Hextasy.Halma</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.JumpToKill\Hextasy.JumpToKill.csproj">
-      <Project>{f3e4c333-cb73-444f-8640-517c96d76db2}</Project>
-      <Name>Hextasy.JumpToKill</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.LightsOff\Hextasy.LightsOff.csproj">
-      <Project>{4ddaf828-7805-4e58-9596-8c935c638175}</Project>
-      <Name>Hextasy.LightsOff</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.Trains\Hextasy.Trains.csproj">
-      <Project>{8ad4738d-0fc5-4b1f-ab22-9f3d0ec379a9}</Project>
-      <Name>Hextasy.Trains</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.XInARow\Hextasy.XInARow.csproj">
-      <Project>{a30347e1-ea0e-4945-a50a-98f37bfd79b2}</Project>
-      <Name>Hextasy.XInARow</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Hextasy.Framework\Hextasy.Framework.csproj">
-      <Project>{870BE3B8-1F0E-4422-A3B5-FDE8BAB6FDA3}</Project>
-      <Name>Hextasy.Framework</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Import Project="Fody.targets" />
