--- a/Hextasy/packages.config
+++ b/Hextasy/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caliburn.Micro" version="1.5.2" targetFramework="net451" />
-  <package id="Fody" version="1.19.1.0" targetFramework="net451" developmentDependency="true" />
-  <package id="PropertyChanged.Fody" version="1.43.1.0" targetFramework="net451" />
+  <package id="Fody" version="1.20.0.0" targetFramework="net451" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="1.46.0.0" targetFramework="net451" developmentDependency="true" />
 </packages>
