--- a/Hextasy.CardWars/Hextasy.CardWars.csproj
+++ b/Hextasy.CardWars/Hextasy.CardWars.csproj
@@ -174,6 +174,7 @@
     <Compile Include="CurrentPlayerChangedEventArgs.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="DeckBuilders\AllDeckFactory.cs" />
+    <Compile Include="DeckBuilders\BeastDeckFactory.cs" />
     <Compile Include="DeckBuilders\DeckFactory.cs" />
     <Compile Include="DeckBuilders\TestDeckFactory.cs" />
     <Compile Include="DeckBuilders\UndeadDeckFactory.cs" />
