--- a/Hextasy.Test/Hextasy.Test.csproj
+++ b/Hextasy.Test/Hextasy.Test.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="HexMapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RNGTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
